Animation now affects the shaders, however the spotlights have disappeared and the model has a habbit of disappearing

--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -148,5 +148,20 @@
     <None Include="Shaders\RiggedVertex.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\RiggedPointShadow.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\RiggedPointShadow.geom">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\RiggedPointShadow.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\RiggedShadowMapping.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\RiggedShadowMapping.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
