--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -261,6 +261,11 @@
   <ItemGroup>
     <None Include="Models\Test.dae" />
     <None Include="Shaders\RiggedFragment.frag" />
+    <None Include="Shaders\RiggedPointShadow.frag" />
+    <None Include="Shaders\RiggedPointShadow.geom" />
+    <None Include="Shaders\RiggedPointShadow.vert" />
+    <None Include="Shaders\RiggedShadowMapping.frag" />
+    <None Include="Shaders\RiggedShadowMapping.vert" />
     <None Include="Shaders\RiggedVertex.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
