--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="AnimatedModel.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimNode.cpp" />
+    <ClCompile Include="ArtificialIntelligenceSystem.cpp" />
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="AudioSystem.cpp" />
     <ClCompile Include="Bone.cpp" />
@@ -138,6 +139,7 @@
     <ClCompile Include="CollisionCuboid.cpp" />
     <ClCompile Include="CollisionShape.cpp" />
     <ClCompile Include="CollisionSphere.cpp" />
+    <ClCompile Include="ComponentArtificalIntelligence.cpp" />
     <ClCompile Include="ComponentAudio.cpp" />
     <ClCompile Include="ComponentDirection.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
@@ -171,7 +173,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="Node.cpp" />
-    <ClCompile Include="OpenGL.cpp" />
+    <ClCompile Include="PathFollowing.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Projection.cpp" />
@@ -193,6 +195,7 @@
     <ClInclude Include="AnimatedModel.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimNode.h" />
+    <ClInclude Include="ArtificialIntelligenceSystem.h" />
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="AudioSystem.h" />
     <ClInclude Include="Bone.h" />
@@ -202,6 +205,7 @@
     <ClInclude Include="CollisionCuboid.h" />
     <ClInclude Include="CollisionShape.h" />
     <ClInclude Include="CollisionSphere.h" />
+    <ClInclude Include="ComponentArtificalIntelligence.h" />
     <ClInclude Include="ComponentAudio.h" />
     <ClInclude Include="ComponentDirection.h" />
     <ClInclude Include="ComponentInput.h" />
@@ -233,7 +237,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="Node.h" />
-    <ClInclude Include="OpenGL.h" />
+    <ClInclude Include="PathFollowing.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Projection.h" />
@@ -247,7 +251,6 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShadowSystem.h" />
     <ClInclude Include="StaticModel.h" />
-    <ClInclude Include="stb_image.h" />
     <ClInclude Include="SystemManager.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vec3AnimKey.h" />
@@ -267,6 +270,9 @@
     </ProjectReference>
     <ProjectReference Include="..\Lua\Lua.vcxproj">
       <Project>{7fcce334-42b1-4cf3-8f96-04cafe83f7c0}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\OpenGL\OpenGL.vcxproj">
+      <Project>{705a2196-0c29-4942-a312-f30eeaf270eb}</Project>
     </ProjectReference>
     <ProjectReference Include="..\RapidJSON\RapidJSON.vcxproj">
       <Project>{4e408fff-3aa3-49cf-88ba-903873f1cb44}</Project>
