--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -246,6 +246,12 @@
     <ClCompile Include="ArtificialIntelligenceSystem.cpp">
       <Filter>Systems</Filter>
     </ClCompile>
+    <ClCompile Include="LocationSound.cpp">
+      <Filter>Audio Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="EntitySound.cpp">
+      <Filter>Audio Manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -431,6 +437,12 @@
     </ClInclude>
     <ClInclude Include="ArtificialIntelligenceSystem.h">
       <Filter>Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="LocationSound.h">
+      <Filter>Audio Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="EntitySound.h">
+      <Filter>Audio Manager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
