Slight optimisation to the code, 3d level now loads from a map, and the return of shadows in release mode, still missing in debug mode (no idea why)

--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -164,4 +164,9 @@
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="3DLevel.txt">
+      <Filter>Levels</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
