--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -268,6 +268,9 @@
     <None Include="Shaders\RiggedShadowMapping.vert" />
     <None Include="Shaders\RiggedVertex.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="3DLevel.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\glm.0.9.9\build\native\glm.targets" Condition="Exists('..\packages\glm.0.9.9\build\native\glm.targets')" />
